<resources>
    <string name="app_name">Weather_Lesson_One</string>
    <string name="button">Go!</string>
    <string name="city">City</string>
    <string name="temperature">temperature</string>
    <string name="wind">wind</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="find">Find</string>
    <string name="enter_name">Enter the name of the city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DAY">Day</string>
    <string name="Day">Day</string>
    <string name="Find">Find</string>
</resources>